<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.datasync.DataSyncFragment"
    android:background="@mipmap/background_clean">

    <LinearLayout
        android:id="@+id/wifi_form_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/lbl_machines"
            android:layout_width="255dp"
            android:layout_height="20dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:text="@string/label_list_machines"
            android:layout_marginTop="6dp"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textSize="15dp"
            android:textColor="#ffffff"
            />

        <ListView
            android:id="@+id/listview_datasync_machines"
            android:layout_width="match_parent"
            android:layout_height="332dp"
            android:layout_marginTop="11dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:id="@+id/wifi_form_2"
            android:layout_width="fill_parent"
            android:layout_height="95dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >



            <TextView
                android:id="@+id/btn_last_sync_to_cloud"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginStart="140dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="11dp"
                android:text="@string/btn_last_sync_to_cloud"
                android:background="@color/gray"

                />

            <Button
                android:id="@+id/btn_connect_machine"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="Connect to machine"
                android:layout_marginTop="8dp"
                android:textSize="11dp"
                android:textColor="@color/black"
                android:background="@drawable/button_shape"
                app:backgroundTint="#d47d04"
                />

           <Button
                android:id="@+id/btn_sync_aut"
                android:layout_width="145dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/btn_sync_aut"
                android:layout_marginTop="8dp"
                android:textSize="11dp"
                android:textColor="@color/black"
                android:background="@drawable/button_shape"
                app:rippleColor="@color/cardview_light_background"
                app:backgroundTint="#04c9b9"
                />

            <Button
                android:id="@+id/btn_last_sync_cloud"
                android:layout_width="145dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/btn_last_sync_cloud"
                android:layout_marginTop="8dp"
                android:textSize="11dp"
                android:textColor="@color/black"
                android:background="@drawable/button_shape"
                app:rippleColor="@color/cardview_light_background"
                app:backgroundTint="#e2e605"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>