<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_clean"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/txt_status_settings"
        android:layout_width="358dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_login_form"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/action_settings"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="360dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_status_settings">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_selec_language_message"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/lang_en"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="100dp"
                    android:background="@drawable/usa_flag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/lang_in"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/indonesia_flag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:ignore="SpeakableTextPresentCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/btn_ajust_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ajust_time"
                android:layout_margin="10dp"/>

            <TextView
                android:visibility="invisible"
                android:id="@+id/txt_connect_config"
                android:layout_width="358dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_login_form"
                android:gravity="center"
                android:text="@string/txt_connect_config"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lang_en" />

            <EditText
                android:visibility="invisible"
                android:id="@+id/machine_tablet_address"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/bottom_bar"
                android:ems="10"
                android:hint="MachineTablet IP with Port"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connect_port"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:visibility="invisible"
                android:id="@+id/wifi_password"
                android:layout_width="320dp"
                android:layout_height="25dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/bottom_bar"
                android:ems="10"
                android:hint="Wifi default password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_connect_config"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:visibility="invisible"
                android:id="@+id/cloud_address"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/bottom_bar"
                android:ems="10"
                android:hint="Cloud Address"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connect_url"
                tools:ignore="TouchTargetSizeCheck" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </LinearLayout>


    </ScrollView>


    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_save"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
